Updated /authors docs
